# Django_test_project

./: pyproject.toml
project/: settings.py  urls.py
resume/: models.py  serializers.py  urls.py  views.py
resume/migrations/: 0001_initial.py
tests/: conftest.py  factories.py
tests/resume/: resume_test.py
